I bootstrapified and made chagenges in about and css file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<link rel="stylesheet" href="resources/css/stylesheet.css">
+<link rel="stylesheet" href="resources/css/style.css">
 
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
    <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,11 +52,11 @@
       <div class="logo"><a href="#">Hiker Paradise</a></div>
       <div class="nav-links">
         <div class="sidebar-logo">
-          <span class="logo-name">CodingLab</span>
+          <span class="logo-name">Hiker</span>
           <i class='bx bx-x' ></i>
         </div>
         <ul class="links">
-          <li><a href="#">HOME</a></li>
+          <li><a href="/index.html">HOME</a></li>
           <li>
             <a href="#">PROJECT</a>
             <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
@@ -86,7 +86,8 @@
               <li><a href="#">Partys</a></li>
             </ul>
           </li>
-          <li><a href="#">ABOUT</a></li>
+
+          <li><a href="/about.html">ABOUT</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
