--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
               <li><a href="#">Partys</a></li>
             </ul>
           </li>
-          <li><a href="/First_VS_Code_Project/about.html">ABOUT</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
