--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
               <li><a href="#">Partys</a></li>
             </ul>
           </li>
-          <li><a href="/First_VS_Code_Project/about.html">ABOUT</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
@@ -181,7 +181,7 @@
     <div class="w50 textbox-1">
       <p> We value quality over quantity and depth over breadth. Moving at a walking pace through the Alps gives you time to let new experiences soak in and work their magic. </p>
     </div>
-    <div class="w50 object-fit"><a href="#"> <img src="First_VS_Code_Project/resources/images/north-cascades3.jpg" alt="broken image" width="100%"> </a></div>
+    <div class="w50 object-fit"><a href="#"> <img src="/resources/images/north-cascades3.jpg" alt="broken image" width="100%"> </a></div>
   </div>
       
 			
