--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <i class='bx bx-x' ></i>
         </div>
         <ul class="links">
-          <li><a href="First_VS_Code_Project/index.html">HOME</a></li>
+          <li><a href="/index.html">HOME</a></li>
           <li>
             <a href="#">PROJECT</a>
             <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
@@ -87,7 +87,7 @@
             </ul>
           </li>
 
-          <li><a href="First_VS_Code_Project/about.html">ABOUT</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
