--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="First_VS_Code_Project/blob/main/about">About</a></li>
           <li class="dropdown" onmouseover="hover(this);" onmouseout="out(this);"><a href="#">Services &nbsp;<i class="fa fa-caret-down"></i></a>
             <div class="dd">
               <div id="up_arrow"></div>
