--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           
         </div>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="First_VS_Code_Project/blob/main/about">About</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/about.html">About</a></li>
           <li class="dropdown" onmouseover="hover(this);" onmouseout="out(this);"><a href="#">Services &nbsp;<i class="fa fa-caret-down"></i></a>
             <div class="dd">
               <div id="up_arrow"></div>
